--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="./index.css"/>
-  <title>Document</title>
+  <title>To-Do-List</title>
 </head>
 <body>
-
+  <h1>My Page</h1>
 
 
 
