--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>ADD TO ALREADY LONG LIST OF "TO DO"</h1>
     <form id="ToDoForm">
       <input type="text" name="ToDoInput" id="text" placeholder="Add to do here....">
-      <button type="submit" class="SubmitButton"><strong>+</strong></button>
+      <button type="submit" class="SubmitButton"><strong>ADD</strong></button>
     </form>
     <div class="addedToDo">
       <h2>Newly Added To Do List:</h2>
